--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team-Losung Tischtennis v1.3</title>
+    <title>Team-Losung Tischtennis v1.2</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -62,18 +62,6 @@
     </table>
 
     <button onclick="saveTeamNames()">Teamnamen speichern</button>
-
-    <div>
-        <label>
-            <input type="radio" name="mode" value="roundRobin" checked>
-            Jeder gegen Jeden
-        </label>
-        <label>
-            <input type="radio" name="mode" value="groupStage">
-            Gruppenphase
-        </label>
-    </div>
-
     <button onclick="generateSchedule()">Spielplan erstellen</button>
 
     <h3>Spielplan:</h3>
@@ -91,177 +79,9 @@
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
-        import { getDatabase, ref, set, get } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-database.js";
+        import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-database.js";
 
         const firebaseConfig = {
             apiKey: "AIzaSyAksVQRYriHb9gS7TjgeN3faX10IoKJBIw",
             authDomain: "tischtennis-9575d.firebaseapp.com",
-            databaseURL: "https://tischtennis-9575d-default-rtdb.firebaseio.com",
-            projectId: "tischtennis-9575d",
-            storageBucket: "tischtennis-9575d.appspot.com",
-            messagingSenderId: "164931288159",
-            appId: "1:164931288159:web:5863d07a4cf511ee462fea"
-        };
-
-        const app = initializeApp(firebaseConfig);
-        const db = getDatabase(app);
-
-        const players = [];
-        let teams = [];
-        let schedule = [];
-
-        function addPlayer() {
-            const playerName = document.getElementById('playerName').value.trim();
-            if (playerName && !players.includes(playerName)) {
-                players.push(playerName);
-                document.getElementById('playerList').innerHTML += `<li>${playerName}</li>`;
-                document.getElementById('playerName').value = '';
-            } else {
-                alert(playerName ? 'Spieler ist bereits hinzugefügt!' : 'Bitte einen gültigen Namen eingeben.');
-            }
-        }
-
-        function drawTeams() {
-            const teamTable = document.getElementById('teamTable').querySelector('tbody');
-            teamTable.innerHTML = '';
-            teams = [];
-
-            if (players.length < 2) {
-                alert('Es müssen mindestens zwei Spieler hinzugefügt werden!');
-                return;
-            }
-
-            const shuffledPlayers = [...players];
-            shuffle(shuffledPlayers);
-
-            let teamCount = 1;
-            while (shuffledPlayers.length >= 2) {
-                const player1 = shuffledPlayers.pop();
-                const player2 = shuffledPlayers.pop();
-                const teamName = `Team ${teamCount}`;
-                teams.push({ player1, player2, teamName });
-                const row = `<tr>
-                    <td>${teamName}</td>
-                    <td>${player1}</td>
-                    <td>${player2}</td>
-                    <td><input type="text" class="rename-input" value="${teamName}" onchange="updateTeamName(${teamCount - 1}, this.value)"></td>
-                </tr>`;
-                teamTable.innerHTML += row;
-                teamCount++;
-            }
-        }
-
-        function updateTeamName(teamIndex, newName) {
-            teams[teamIndex].teamName = newName;
-        }
-
-        function saveTeamNames() {
-            const teamTable = document.getElementById('teamTable').querySelector('tbody').rows;
-            for (let i = 0; i < teamTable.length; i++) {
-                const newName = teamTable[i].querySelector('.rename-input').value.trim();
-                teams[i].teamName = newName;
-            }
-
-            set(ref(db, 'teams'), teams)
-                .then(() => {
-                    alert('Teamnamen erfolgreich gespeichert.');
-                    updateScheduleWithNewNames();
-                })
-                .catch(error => console.error('Fehler beim Speichern der Teamnamen:', error));
-        }
-
-        function generateSchedule() {
-            const mode = document.querySelector('input[name="mode"]:checked').value;
-            if (mode === "roundRobin") {
-                generateRoundRobinSchedule();
-            } else if (mode === "groupStage") {
-                generateGroupStageSchedule();
-            }
-        }
-
-        function generateRoundRobinSchedule() {
-            const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
-            scheduleTable.innerHTML = '';
-            schedule = [];
-
-            if (teams.length < 2) {
-                alert('Es müssen mindestens zwei Teams vorhanden sein!');
-                return;
-            }
-
-            const availableMatches = [];
-            for (let i = 0; i < teams.length; i++) {
-                for (let j = i + 1; j < teams.length; j++) {
-                    availableMatches.push({ team1: teams[i].teamName, team2: teams[j].teamName });
-                }
-            }
-
-            let matchCount = 1;
-            availableMatches.forEach(match => {
-                schedule.push({ match: `Spiel ${matchCount++}`, ...match, result: '' });
-            });
-
-            updateScheduleTable();
-        }
-
-        function generateGroupStageSchedule() {
-            if (teams.length < 4) {
-                alert('Es müssen mindestens 4 Teams vorhanden sein, um eine Gruppenphase zu erstellen!');
-                return;
-            }
-
-            shuffle(teams);
-            const half = Math.ceil(teams.length / 2);
-            const groupA = teams.slice(0, half);
-            const groupB = teams.slice(half);
-
-            schedule = [];
-
-            generateGroupMatches(groupA, 'A');
-            generateGroupMatches(groupB, 'B');
-
-            schedule.push(
-                { match: 'Halbfinale 1', team1: groupA[0].teamName, team2: groupB[1].teamName, result: '' },
-                { match: 'Halbfinale 2', team1: groupA[1].teamName, team2: groupB[0].teamName, result: '' },
-                { match: 'Spiel um Platz 3', team1: 'Verlierer Halbfinale 1', team2: 'Verlierer Halbfinale 2', result: '' },
-                { match: 'Finale', team1: 'Gewinner Halbfinale 1', team2: 'Gewinner Halbfinale 2', result: '' }
-            );
-
-            updateScheduleTable();
-        }
-
-        function generateGroupMatches(group, groupName) {
-            for (let i = 0; i < group.length; i++) {
-                for (let j = i + 1; j < group.length; j++) {
-                    schedule.push({
-                        match: `Gruppe ${groupName}: ${group[i].teamName} vs ${group[j].teamName}`,
-                        team1: group[i].teamName,
-                        team2: group[j].teamName,
-                        result: ''
-                    });
-                }
-            }
-        }
-
-        function updateScheduleTable() {
-            const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
-            scheduleTable.innerHTML = '';
-            schedule.forEach((game, index) => {
-                scheduleTable.innerHTML += `<tr>
-                    <td>${game.match}</td>
-                    <td>${game.team1}</td>
-                    <td>${game.team2}</td>
-                    <td><input type="text" class="result-input" placeholder="Ergebnis" onchange="updateResult(${index}, this.value)"></td>
-                </tr>`;
-            });
-        }
-
-        function shuffle(array) {
-            for (let i = array.length - 1; i > 0; i--) {
-                const j = Math.floor(Math.random() * (i + 1));
-                [array[i], array[j]] = [array[j], array[i]];
-            }
-        }
-    </script>
-</body>
-</html>
+            databaseURL: "https://tischtennis-9575d-default-rtdb
